# gtkbar

./: .gitignore  app.h  battery.c  calendarpopup.c  date.c  flake.nix  main.c  meson.build  result  style.css  util.c  volume.c  volumepopup.c  volumepopup.h  wifi.c  workspaces.c
src/: app.h  main.c
src/bar/: bar.c  bar.h
src/media/: media.c  media.h
src/networking/: networking.c  networking.h
src/popups/: bt.c  bt.h  calendarpopup.c  calendarpopup.h  ctrlcenterpopup.c  ctrlcenterpopup.h  mediaPopup.c  mediaPopup.h  mixer.c  mixer.h  popupposition.c  popupposition.h  volumepopup.c
src/widgets/: volume.c  volume.h  wifi.c  wifi.h  workspaces.c
